Designer: fix collapse/expand KP-3406 UI: edit all custom question types (all fields)
Former-commit-id: 272d82b67dc65b6018ca3ddb7f4ea3683e5f4a89

--- a/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-question-list.css.less
+++ b/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-question-list.css.less
@@ -100,7 +100,7 @@
       font-weight: normal;
     }
 
-    > span.btn-collapse, > span.btn-expand {
+     span.btn-collapse, span.btn-expand {
       @side: 16px;
       display: inline-block;
       position: relative;
@@ -112,10 +112,10 @@
       //outline: 1px red dotted;
     }
 
-    > span.btn-collapse {
+     span.btn-collapse {
       background-position: center -8px;
     }
-    > span.btn-expand {
+     span.btn-expand {
       background-position: center -40px;
     }
 
